Fixes new Integer usage in StringToByteConverterTest.java
Change-Id: Ibd6ca0f6ef643ebe159e28b0b7771a1e57da8a6b
Signed-off-by: Lars Vogel <Lars.Vogel@vogella.com>